@@ -127,8 +127,10 @@ testTortureExecute (void)
   int i;
   for (i = 0; i < N; i++)
     {
+#ifndef TEST_HOST
       __asm;
       __endasm;
+#endif
       a[i] = i - N / 2;
       b[i] = i;
     }
