@@ -15,6 +15,15 @@
 	  support/regression/tests/gcc-torture-execute-pr66940.c,
 	  support/regression/tests/gcc-torture-execute-pr69320-4.c:
 	  Disable new long long tests for ds390.
+	* src/SDCC.y,
+	  src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/SDCCsymt.h,
+	  src/SDCCsymt.c,
+	  support/regression/tests/p99-conformance.c:
+	  Implement RFE #2538: Qualifiers in array parameters (ISO C99).
+	* support/regression/tests/gcc-torture-execute-pr51581-1.c:
+	  Fix for test-host.
 
 2017-09-25 Philipp Klaus Krause <pkk AT spth.de>
 
